# FloatingNavbar

./: .gitmodules  AudioCaptureManager.cpp  AudioCaptureManager.h  AudioDeviceSelector.h  CMakeLists.txt  ConfigUtil.cpp  ConfigUtil.h  GroqStreamer.cpp  GroqStreamer.h  MessagePopup.cpp  MessagePopup.h  ModelSelectionDialog.cpp  ModelSelectionDialog.h  PipeServer.cpp  PipeServer.h  PipeWorker.cpp  PipeWorker.h  PromptLoader.cpp  PromptLoader.h  PromptWindow.cpp  PromptWindow.h  QuestionExtractor.cpp  QuestionExtractor.h  README.md  ScreenshotHandler.cpp  ScreenshotHandler.h  ScreenshotResponseWindow.cpp  ScreenshotResponseWindow.h  SettingsDialog.cpp  SettingsDialog.h  TranscriptWindow.cpp  TranscriptWindow.h  VadProcessor.cpp  VadProcessor.h  audiowsclient.cpp  audiowsclient.h  demo  help  main.cpp  moreoptionsdialog.cpp  (+3 more)
.github/workflows/: release.yml
configs/: wsocket.ini
